@@ -18,6 +18,8 @@ gnome-shell (3.25.91-0ubuntu3) UNRELEASED; urgency=medium
       by the user.
     - ensure lock screen matches gdm and shell theming.
   * Theme new assets on build (close and toggle buttons)
+  * Add upstream high contrast theme to ubuntu mode. This will default to
+    adwaita with upstream colors for accessibility.
 
  -- Didier Roche <didrocks@ubuntu.com>  Thu, 31 Aug 2017 13:26:28 +0200
 
